1 - ui: fix invalid #webpage position (external URL not visible)

--- a/core/client/lemverse.scss
+++ b/core/client/lemverse.scss
@@ -108,6 +108,7 @@ hr.separator {
   position: absolute;
   right: 0;
   left: 50%;
+  top: 0;
   height: 100vh;
   z-index: 1;
   visibility: hidden;
